<resources>
    <string name="app_name" translatable="false">HW_3</string>
    <string name="search">Search</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login">Login..</string>
    <string name="details">Details</string>
    <string name="followers">Followers:</string>
    <string name="following">Following:</string>
    <string name="repository">Repository:</string>
    <string name="experience">Experience:</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_a_theme">Choose a theme:</string>
    <string name="dark_theme">Night theme</string>
    <string name="light_theme">Light theme</string>
    <string name="save_energy_theme">Energy-saving theme</string>
    <string name="system_theme">System theme</string>
    <string name="theme1">Theme</string>
    <string name="english">English</string>
    <string name="lang">Language</string>
    <string name="choose_a_language">Choose a language:</string>
    <string name="russian">Русский</string>
    <string name="google_maps" translatable="false">Google maps</string>
    <string name="users_list">Users list</string>
    <string name="git_users" translatable="false">Git-Users</string>
</resources>