<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:title="@string/theme1"
            app:titleTextColor="@color/white"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="215dp"
        android:text="@string/choose_a_theme"
        android:textSize="25sp"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/themeDark"
            style="@style/RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme" />

        <RadioButton
            android:id="@+id/themeLight"
            style="@style/RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_theme" />

        <RadioButton
            android:id="@+id/themeBattery"
            style="@style/RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_energy_theme" />

        <RadioButton
            android:id="@+id/themeSystem"
            style="@style/RadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_theme" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>
