<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/settings">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/settings"
        app:titleTextColor="@color/white"
        android:background="@color/black"/>

    <TextView
        style="@style/Settings"
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/theme"/>

    <TextView
        style="@style/Settings"
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language"/>
</LinearLayout>